# CHATGPTFLASHBOT

./: .dockerignore  .env.example  .env.staging.example  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_2026-07-06.md  BOT_MAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  DEPLOYMENT.md  DEPLOY_AWS.md  Dockerfile  GRILL_BACKLOG.md  IMPLEMENTATION_PLAN.md  PROJECT_SPEC.md  README.md  RELEASE_CHECKLIST.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
admin/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
api/: carousel.py  deps.py  images.py  main.py
bot/: format_md.py  main.py
core/: bot_client.py  config.py  constants.py  db.py  lifecycle.py  logging_setup.py  queue.py  redis_client.py  timeutils.py
docs/: API.md  ARCHITECTURE.md  BACKUP.md  CICD.md  DEPLOYMENT.md  ENV.md  MONITORING.md  RESTORE.md  RUNBOOK.md  SCALING.md  SECURITY.md  SPEC_RU.md  STAGING_SMOKE.md  TROUBLESHOOTING.md  atomic-release-runbook.md
litellm/: config.yaml
loadtests/: README.md
migrations/: env.py
miniapp/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
monitoring/: alertmanager.yml  alerts.yml  loki-config.yml  prometheus.yml  promtail-config.yml
scripts/: atomic_release.sh  backfill_country.py  backup.sh  check_migrations.py  ci_local.sh  create_admin.py  db_maintenance.sql  e2e_pipeline_check.py  gateway_check.py  init_db.py  live_check.py  lock-deps.sh  mock_ai_server.py  money_flow_check.py  restore.sh  restore_test.sh  run_loadtests.sh  seed_ai_models.py  seed_catalogs.py  share.ps1  smoke_contract_test.sh  smoke_test.sh  start_all.ps1  (+1 more)
(+548 files in other folders)
