[project]
name = "ai-bot-1"
version = "0.1.0"
description = "ИИ Бот №1 — multi-model AI Telegram bot + Mini App (clone)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.ruff.lint.per-file-ignores]
# Localized translation strings & migration column DDL are data, not code —
# wrapping them at 100 cols hurts readability without any benefit.
"core/i18n/locales/*.py" = ["E501"]
"migrations/versions/*.py" = ["E501"]
"bot/main.py" = ["E501"]  # localized bot-command descriptions table

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
